@@ -4,26 +4,21 @@ Hash: SHA256
 AUX zile-2.3.24-userhome.patch 980 SHA256 68c7fa25fa7e6e0f9b5240f0824a9148edce6289870d281c9ecb99e421451541 SHA512 b1d0e4453771d36efe6547d9c30c807af0a05866bd728a94d30f25b8e9248d880a02143c5d1d9b47fa7a5cab9174804feeb3cc0f2956474c948349581d7a25e7 WHIRLPOOL 369b4d1205ed5acb7717d94df69cde61dc6d2735798ccc3945eb44433bf0ec03f93652c0d259f418c3d376c28bdcca01eb6f3396a3ed4e3ab2dd37e39e203cc6
 DIST zile-2.3.24.tar.gz 953962 SHA256 218bb2af414c6a168101656631a5b2da92f20a965895e1006658cc658b0b7e89 SHA512 8361f42436ae9ca150f09d830096b7a3fb0089d58bffe5ad7538b5ec5cd4e0e50085213e938db1a95e2922db845d1d2f36841a65fe1b9b72f60cd930dd8f09b9 WHIRLPOOL 37aae22305abdc2c2b86c8f6b43dcb7621464213ac375ec2fde767d99f79ddba08216c392c5500a71175f30762fe57e786f94305ff03947e413d5291cfafa934
 DIST zile-2.4.11.tar.gz 1293707 SHA256 1fd27bbddc61491b1fbb29a345d0d344734aa9e80cfa07b02892eedf831fa9cc SHA512 dbcbae98d8b9fc7ea71abc8ad0c4248edf1498a731172e800dd4b1fd598597924cc61e24fbfce5eb44dd2b3a0b2aea416c6373843a450e19cc8c98aa83d6ae0e WHIRLPOOL c39cafe9b4409580656c29df78e8a4aeb37487b93bb01e357c964866f27207ef2811672967c7da7e2ad9bdfb2d47ea09168c611d89757b000530dbb60d5785d9
-DIST zile-2.4.9.tar.gz 1192776 SHA256 c71959c7aca02ac66be526ecccbc7954fb0ea7591ed3c13311a95e8f040b0049 SHA512 5660ef4d1b3bb87386111d64e2b4bed1c1ab99c893016378fc42312af28105f81a8a86f7926694c6440488cd0eef029a2e8c965414a123473a004bf349b1d6c6 WHIRLPOOL 6138b37d528e470b10369fd9f9aedd08be73811b5c1628df8123e8ba05c7d74898eb6f7a6a51599143d854a0b8e54d27f79069288446357d460b654b278c4793
 EBUILD zile-2.3.24-r1.ebuild 1034 SHA256 6a9cdf4b517d739a43a987c27aa038acde2cbec0db3cae93221864dc7f4a2935 SHA512 a0296d73890feb77cb46759a39bba0c6f176f32d15eefee38a2d23722f0266c1549154e503b56eb0908ec82786461326bb1a3e6750fdc55bf06df6d13a2e45ea WHIRLPOOL ff662937573a17f73b06530eaa48ea8f6457d900a3cb37d732187e1a229249fe92671a3e53ddad5b331f735d9ef0ef09f976e098b8618113499b143688ef2119
 EBUILD zile-2.4.11.ebuild 1018 SHA256 ef1d0bb7669614a5f33f240aa85425e4e49c22917fa6faf9386ea9dd5084a3c7 SHA512 7c625eb62b1e79a58a09819905dd8a79721e6c68649b060735657fb8bcdd5304135f56416c57c63c6671d0818f9b00a4c4ae0de3d5ed695488d231c9223a868b WHIRLPOOL d1e4ee0dd9a85db8aa8716843d98990f05b88beb6a30870172bd834054122840a9b22e637c0716b3fb12c6c881a56c19a26c76b8f6acb9497d8f5025de78021c
-EBUILD zile-2.4.9.ebuild 1011 SHA256 e996352c7d73ebbf31a20609a5f0078fecdca784d3393e284ca3ecb1eaba5a56 SHA512 bc97f136d8c01dbbd7c072ae03bbbefa163336e998035469bd0c9d9c54a9156b74bfce632f70878452e93cd62f1413d16c6914ae2b054c7806ede32ff66becc4 WHIRLPOOL c5ff9d51636a54392291a45b36fe1a4555b4a5c75e910efa909b573b8366c7e0b7aa7c0ca79f947f3b8933cfbfbc5060a9549953f640f45545b2d21507b3bf22
-MISC ChangeLog 23557 SHA256 b4a716486eabd74e70aa1012fd7a71bbad8d422583d537002573b9b318f3d24a SHA512 8d6138d4687475946bb7cabe0169d4fd1e0dd364c61b75eeb9e7980060b90abc3b7fe8d56067f00e866eea4a077cde23c8fd97cfb3cddf1a6337fff8bc4d5627 WHIRLPOOL e861a183cdf971db5e42e4e307e234f33541936e3e7ffab72629b7e92beacb8a6cf5923000c1f812b59bebea6517e228870044f5fc3f2b72f2a758a62eca3f15
+MISC ChangeLog 23639 SHA256 5e953d0a544dedfb0d89691f5b386f83ccb912c7856e0168074f4c842f40b177 SHA512 80f36005d1e4d64b4e42620e5e16adaf1f51cadac39ed1f44af1178b1c2d188a03381c9e8ebab2284087d215a16d4b9d57b90a6181af0133849ca39554256593 WHIRLPOOL 07603a1a6d18ad1a8bd6b8a9e1d34d4a66c397f52ea33682cbf0322d9de7a7e2f4c34bf5fef96952f679084d9aef05fd396eecf3869eeb2cde88e4be41291094
 MISC metadata.xml 545 SHA256 301c943f7ac78de9705192c968070ae68d4b42ea75b9e2909886623bafe7338b SHA512 e7dd95f1add4e7070e9bdf75ec7b77e8608a6a63143c3404b07724594493128cc5116511f72c0664f9090441d675097bea73e707a466fb5a868769b353bd5be1 WHIRLPOOL a67a9845893b9dfd0467e5c87ce52c641683b773951477855648f83808e8d7142f2d0d3293ded7d0d2b0097f48197a0bc92080b58707cd21c87f6e42e8c96893
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU9C28AAoJELp701BxlEWfKiIP/RPao3w0YdwwG5PIuLiLdi7/
-Plk5/+ZlKCktgJwdz8VH2Ic72py75HRp3Wh/IJvWTHcpJpsEpsGA2RE0HbudrrDW
-SUQQn6dmLNblXC0lOvPA6+nsM1AgrIeBdOsj+BRFBHCn9HbVEAsYTEiz3KqEBmsX
-VDTALVOvsShZl/hr6qbfRi20WIrEME6ThcuNaNXBpoS1745yYV3OKaMmYcxmxeQ9
-4uEf36TWjVyN7O2rZ3sRVR9i0DmFD1tHsJDVBT/KQRC4Wc82F4YkfjNvoIBtULlS
-Aol9dAO4Y9fCx5LlEls6Q0PldV9r8yDfRoXs9ft4/ADb65gKrwYhxI0RXwYWD0Ee
-K8F3baGnUlPVXv2J7ktkDFiVfT5tR5dp99+7CrSqNDANNi5DV78DNZ7LO+yw1u3L
-RA6PilEo4oJhifDe2MJ6K4sV1KIWUgt0uoMqzkGmLQ4uIN4855H88T3xn/HF2KDO
-XY1HhORFkeOxSBC2XZcKptG/4jXygvOYUWr+b2OJ161uJHhOLf+ijE0ZsyG8pNUX
-M0pqEtT64SJ8tVYGTOy5tSu3vXVDGpIxMaJcrI3kHwXfv/lV9vpOxJitIuL5XI2T
-39gYGtj95673kGzDi1U+50TcBOd7/5Us7s/kwGKek09o+0UkORVrgg0plH/Bya6D
-hTu734rjbNGlMZYpPHf4
-=deG+
+iQGcBAEBCAAGBQJU9FixAAoJEJQzkH1pP7W4h2YL/R/xxi544WXMn+MLK5bhv7hn
+w2An3M1QBE9+j0FDNYZ//OhwkDMzJWB9bTlWPFIZwEZPHC5pHQ0Xd9C5fOOc3SiC
+geWyCWf4UBqD84QU6ft3hkeE1BwMtltl2BplPK6GPiL/JcLlUOOjIHykSI1E7QJY
+xquMzIQ9ZFK8JhjBqrQPBNhIR4O1TjS+TVZ8u5C3X8A2CDcOtSayyR7mWxHUBdP9
+q9dKv/04O5U401VxIxXfsNROMYhUjU/tU1oxRSy0UytmB/Ox5X+jiVnqcHrehe9x
+db67Czg8DNtWfurC9KghqiZXhprh+2uqmHxmkRKaCPDvjqYdCGHAdQfkcLVjPyjS
+2ILUGB/9hqaOvL1pPZEZ1teXXsjOM28rkenybEuMsCaOyuVffOBpZBqE3vGzhDL3
+SJp01UBB1AyWtRFK5EnmlJw+moYvHwXXZIjd/q4quZjiESlvEeJYosb9RHG/xf1s
+PSpFXpOT8BCDkMgI9s0j+UyMKyGoSV6ay8KD5rsAKg==
+=HMsS
 -----END PGP SIGNATURE-----
