@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/zile
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/zile/ChangeLog,v 1.200 2015/03/02 09:30:35 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/zile/ChangeLog,v 1.201 2015/03/02 12:33:56 ulm Exp $
+
+  02 Mar 2015; Ulrich Müller <ulm@gentoo.org> -zile-2.4.9.ebuild:
+  Remove old.
 
   02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> zile-2.4.11.ebuild:
   Stable for ppc, wrt bug #506330
